Inline SpawnAction.Builder#{setJarExecutable,setExecutable}
pre-factoring for unknown commit

PiperOrigin-RevId: 262500065